<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trios.gradetracker.ProgressActivity">

    <TableLayout
        android:id="@+id/displayTerm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="300dp"
        android:stretchColumns="1,2,3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </TableLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_grade"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="32dp"
        android:src="@android:drawable/ic_menu_edit"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayTerm"
        app:layout_constraintVertical_bias="0.646" />

    <LinearLayout
        android:id="@+id/text_term_content_input"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayTerm">

        <EditText
            android:id="@+id/edit_text_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/courseName"
            android:hint="@string/courseName"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_text_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/grade"
            android:hint="@string/grade"
            android:inputType="number" />

        <Button
            android:id="@+id/create_term_content_button"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:onClick="CreateTermContent"
            android:text="@string/CreateTermContent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>